# vakio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  comparison.ipynb  design.ipynb  info.ipynb  pyproject.toml  usage.ipynb
examples/: bisect.html.tmpl  vscode_token_colors.jsonc
tests/: test_alg.py  test_metadata.py  test_mosaic_layout.py
vakio/: __init__.py  alg.py  metadata.py  palette.py  plot.py  view.py
