[project]
name = "vakio"
version = "0.1.0"
description = ""
authors = [
    {name = "Lauri Oksanen",email = "lauri.oksanen@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ipykernel = "^7.1.0"
pyyaml = "^6.0.3"
pre-commit = "^4.5.1"

[tool.black]
line-length = 70
target-version = ["py310"]
