[project]
name = "vakio"
version = "0.1.0"
description = ""
authors = [{ name = "Lauri Oksanen", email = "lauri.oksanen@helsinki.fi" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["scipy (>=1.15.1,<2.0.0)", "matplotlib (>=3.10.8,<4.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ipykernel = "^7.1.0"
pre-commit = "^4.5.1"
black = "^26.1.0"
isort = "^7.0.0"
nbstripout = "^0.9.0"
ruff = "^0.14.14"

[tool.black]
line-length = 70
target-version = ["py310"]

[tool.isort]
line_length = 70
profile = "black"

[tool.ruff]
line-length = 70
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # bugbear
    "I",  # import rules (pairs nicely with isort)
    "UP", # pyupgrade
]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403"]
